

Slick 7.x-2.0-dev, 2015-3-10
----------------------------
Added info about the data-slick to be removed at Slick 1.5 to slick_devel.
  See https://github.com/kenwheeler/slick/issues/1058
  The data-slick is never used by the module unless for development purposes.
Fixed autoplay for Photobox videos, and moved the Colorbox autoplay logic from
  JS to PHP to share between lightboxes.
Removed thumbnail_hover DOM markups -- thumbnails which appear on hovering dots,
  and used data-thumb attributes managed by JS option customPaging instead.

Slick 7.x-2.0-dev, 2015-3-9
---------------------------
Updated slick_example asNavFor to not use field template for the main display.
Removed extra ISSET checks by proper definitions in
  slick_get_element_default_settings().
Removed wasted "slick--progressive" class, and only provided "slick--ondemand"
  class only if the lazyLoad is ondemand to keep the current fix with excessive
  height of dummy image.
Removed wasted "slick--display--main" class, and only provide one if it has
  thumbnail navigation in companion with "slick--display--thumbnail".
Split "media-icon--lightbox" rules from "slick.colorbox.css" into
  "slick.lightbox.css" to share icon stylings between Colorbox and Photobox.
Deprecated "media-icon--colorbox" for the more generic "media-icon--lightbox".
Updated slick-media.tpl.php to reflect the support for Photobox, adding
  variable $is_lightbox to check for either Colorbox or Photobox.
Added Photobox integration.
Removed Drupal.slick.thumbnail(), and moved the relevant "slick-dots--thumbnail"
  class to dotsClass option instead.
Deprecated "slick__thumbnail" class in favor of "slick-dots--thumbnail".
  If you customized it, be sure to update to "slick-dots--thumbnail", as it will
  be removed at proper release. It is a problematic class, since dotsClass is
  actually alterable child element. However default "slick-dots" is the only
  class to rely on now as a child block level element. If you change the