@@ -34,6 +34,7 @@
 
 .slick--skin--3d-back .slick-initialized .slide .slide__media {
   margin: 30px 0;
+  outline: 1px solid transparent;
   -ms-transform: rotateY(25deg);
   -webkit-transform: rotateY(25deg);
   transform: rotateY(25deg);
